2012-03-12  Stephen White  <senorblanco@chromium.org>

        [chromium] Restore canvas2D acceleration after context loss.
        https://bugs.webkit.org/show_bug.cgi?id=80629

        Reviewed by James Robinson.

        Covered by existing canvas tests, and manual testing (killing the GPU
        process).

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::sharedGraphicsContext3D):

2012-03-12  Nat Duca  <nduca@chromium.org>

        [Chromium] Force compositeAndReadback through regular scheduling flow
        https://bugs.webkit.org/show_bug.cgi?id=77049

        Reviewed by James Robinson.

        * tests/CCFrameRateControllerTest.cpp:
        (WebKitTests::FakeCCFrameRateControllerClient::reset):
        (WebKitTests::FakeCCFrameRateControllerClient::vsyncTicked):
        (WebKitTests::FakeCCFrameRateControllerClient::vsyncTick):
        (FakeCCFrameRateControllerClient):
        (WebKitTests::TEST):
        * tests/CCLayerTreeHostTest.cpp:
        (WTF):
        (CCLayerTreeHostTestCompositeAndReadbackWhileInvisible):
        (WTF::CCLayerTreeHostTestCompositeAndReadbackWhileInvisible::CCLayerTreeHostTestCompositeAndReadbackWhileInvisible):
        (WTF::CCLayerTreeHostTestCompositeAndReadbackWhileInvisible::beginTest):
        (WTF::CCLayerTreeHostTestCompositeAndReadbackWhileInvisible::didCommitAndDrawFrame):
        (WTF::CCLayerTreeHostTestCompositeAndReadbackWhileInvisible::afterTest):
        (WTF::TEST_F):
        * tests/CCSchedulerStateMachineTest.cpp:
        (WebCore::StateMachine::setNeedsForcedCommit):
        (WebCore::StateMachine::needsForcedCommit):
        (StateMachine):
        (WebCore::TEST):
        (WebCore):

2012-03-12  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: Handle LevelDB database corruption
        https://bugs.webkit.org/show_bug.cgi?id=79413

        Reviewed by Tony Chang.

        * WebKit.gyp: Skip LevelDBTest.cpp in shared component builds due to webkit_support dependency